# checklist

./: DEPLOY_CHECK_LOG.txt  DEPLOY_DIAGNOSTIC.txt  DEPLOY_FINAL_FIX.txt  DEPLOY_FIX_INSTRUCTIONS.md  DEPLOY_FIX_V2.md  DEPLOY_GUIDE.md  DEPLOY_HELLO_WORLD.txt  DEPLOY_INSTRUCTIONS.txt  DEPLOY_STEP_BY_STEP.txt  DEPLOY_VERCEL.md  DEPLOY_VERCEL_STATUS.md  FINAL_SECURITY_REPORT.md  LOCAL_SETUP.md  MYSQL_CONNECTION_GUIDE.md  MYSQL_SETUP.md  QUICK_DEPLOY.md  REACT_QUERY_MIGRATION.md  README.md  SECURITY_CHECKLIST.md  SECURITY_RECOMMENDATIONS.md  SETUP_GUIDE.md  SOLUCAO_KINGHOST.md  SPRINTS_SQL.sql  STRUCTURE.md  VERCEL_ENV_VARS.md  VERCEL_SETUP_GUIDE.md  build_deploy.bat  checklist.db  debug.php  debug_deep.php  setup.bat  setup.sh  test_mysql_connection.py  vercel.json
api/: index.py  (+1 more)
backend/: .dockerignore  .env.example  .env.production  .gitignore  .htaccess  ARCHITECTURE.md  Dockerfile  FASE_3_COMPLETA.md  FASE_4_PERFORMANCE.md  README.md  RESUMO_FINAL.md  alembic.ini  checklist.db  checklist.wsgi  create_admin.py  create_admin_direct.py  create_simple_user.py  create_tables.py  create_test_user.py  create_users.py  docker-compose.yml  init_db.py  minimal_start.py  passaenger_wsgi.py  passenger_wsgi.py  pyproject.toml  quick_start.py  requirements-production.txt  requirements.txt  run_dev.py  simple_start.py  start_backend.bat  start_dev.py  test_backend.py  test_mysql.py  test_projects.py
backend/alembic/: env.py
backend/app/: main.py  minimal_main.py
backend/scripts/: create_performance_indexes.sql  deploy.sh  fix_passwords.py  setup_database.sh  verify_setup.sh
(+161 files in other folders)
